# Peer-to-Peer-Rental-Platform

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/accounts/: form.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_rename_name_profile_location_profile_date_birth_and_more.py  0003_profile_facebook_url_profile_items_listed_count_and_more.py  0004_alter_profile_username.py
src/core/: settings.py  urls.py
src/items/: admin.py  form.py  models.py  urls.py  views.py
src/items/migrations/: 0001_initial.py  0002_alter_item_options_alter_itemimage_options_and_more.py  0003_item_city_alter_category_slug_alter_item_slug.py  0004_alter_item_slug.py
src/template/: base.html
src/template/accounts/: edit_profile.html  login.html  profile.html  register.html
src/template/category/: category_confirm_delete.html  category_detail.html  category_form.html  category_list.html
src/template/items/: item_confirm_delete.html  item_detail.html  item_form.html  item_list.html
